<resources>
    <string name="app_name">Instagram clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add_post">add_post</string>
    <string name="favorite">favorite</string>
    <string name="profile">profile</string>
    <string name="kirim">kirim</string>
    <string name="Instagram">Instagram</string>
    <string name="notification">notification</string>
    <string name="menu">meni</string>
</resources>