<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/nav_addbox"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/add_post" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />

</menu>